--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <li><a href="#program">PROGRAMME</a></li>
         <li><a href="#info">INFO PRATIQUES</a></li>
         <li><a href="#equipages">EQUIPAGES</a></li>
-          <li><a href="#sponsor">PARTENAIRES</a></li>
+          <li><a href="#partenaires">PARTENAIRES</a></li>
         <!--<li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
           <span class="caret"></span></a>
@@ -202,7 +202,7 @@
         <li><a href="#program">PROGRAMME</a></li>
         <li><a href="#info">INFO PRATIQUES</a></li>
         <li><a href="#equipages">EQUIPAGES</a></li>
-          <li><a href="#sponsor">PARTENAIRES</a></li>
+          <li><a href="#partenaires">PARTENAIRES</a></li>
         <!--<li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
           <span class="caret"></span></a>
@@ -403,14 +403,14 @@
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/NatixisLuxembourg.jpg" alt="NatixisLuxembourg" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>Natixis Finance &amp; Risques</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamNatixisFR">View Team</button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/CEIDF1.jpg" alt="CEIDF1" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>CEBFC</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamCEBFC">View Team</button>
         </div>
@@ -420,21 +420,21 @@
 	 <div class = "row text-center">
 	  <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/CEIDF2.jpg" alt="CEIDF2" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>CEPAL</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamCEPAL">View Team</button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/NatixisPurple.jpg" alt="NatixisPurple" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>BP1818</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamBP1818">View Team</button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/NatixisUS.jpg" alt="NatixisUS" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>CEIDF 1</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamCEIDF1">View Team</button>
         </div>
@@ -444,21 +444,21 @@
 	 <div class = "row text-center">
 	  <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/CEIDF2.jpg" alt="CEIDF2" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>CEIDF 2</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamCEIDF2">View Team</button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/NatixisPurple.jpg" alt="NatixisPurple" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>I-BP</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamIBP">View Team</button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/NatixisUS.jpg" alt="NatixisUS" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>BPO</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamBPO">View Team</button>
         </div>
@@ -468,21 +468,21 @@
 	 <div class = "row text-center">
 	  <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/CEIDF2.jpg" alt="CEIDF2" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>Natixis Global Market</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamGlobalMarket">View Team</button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/NatixisPurple.jpg" alt="NatixisPurple" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>CELR</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamCELR">View Team</button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/NatixisUS.jpg" alt="NatixisUS" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>CEBPL 1</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamCEBPL1">View Team</button>
         </div>
@@ -492,21 +492,21 @@
 	 <div class = "row text-center">
 	  <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/CEIDF2.jpg" alt="CEIDF2" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>CEBPL 2</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamCEBPL2">View Team</button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/NatixisPurple.jpg" alt="NatixisPurple" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>IT-CE</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamITCE">View Team</button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/NatixisUS.jpg" alt="NatixisUS" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>CEMP</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamCEMP">View Team</button>
         </div>
@@ -516,21 +516,21 @@
 	 <div class = "row text-center">
 	  <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/CEIDF2.jpg" alt="CEIDF2" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>BPCE01</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamBPCE01">View Team</button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/NatixisPurple.jpg" alt="NatixisPurple" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>BPCE CEN</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamBPCECEN">View Team</button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/NatixisUS.jpg" alt="NatixisUS" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>Natixis EMEA</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamEMEA">View Team</button>
         </div>
@@ -540,21 +540,21 @@
 	 <div class = "row text-center">
 	  <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/CEIDF2.jpg" alt="CEIDF2" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>BPCE-IT</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamBPCEIT">View Team</button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/NatixisPurple.jpg" alt="NatixisPurple" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>CENFE</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamCENFE">View Team</button>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/NatixisUS.jpg" alt="NatixisUS" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>NGAM</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamNGAM">View Team</button>
         </div>
@@ -564,7 +564,7 @@
     <div class = "row text-center">
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="./Pictures/CEIDF2.jpg" alt="CEIDF2" width="400" height="300">
+          <img src="" alt="" width="400" height="300">
           <p><strong>CECAZ</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamCECAZ">View Team</button>
         </div>
@@ -2126,6 +2126,50 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div id="partenaires" class="container text-center">
+  <h3>PARTENAIRES</h3>
+  <div class="row text-center">
+    <div class="row">
+      <div class="col-sm-4">
+          <br>
+          <img src="./Pictures/NGAM.png" class="img-circle person" alt="Random Name" width="255" height="255">
+      </div>
+      <div class="col-sm-4">
+          <br>
+          <img src="./Pictures/NATIXIS ASSURANCES.png" class="img-circle person" alt="Random Name" width="255" height="255">
+      </div>
+      <div class="col-sm-4">
+          <br>
+          <img src="./Pictures/NATIXIS.png" class="img-circle person" alt="Random Name" width="255" height="255">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-4">
+          <br>
+          <img src="./Pictures/brinks.png" class="img-circle person" alt="Random Name" width="255" height="255">
+      </div>
+      <div class="col-sm-4">
+          <br>
+          <img src="./Pictures/iBP.png" class="img-circle person" alt="Random Name" width="255" height="255">
+      </div>
+      <div class="col-sm-4">
+          <br>
+          <img src="./Pictures/NXO.png" class="img-circle person" alt="Random Name" width="255" height="255">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6">
+          <br>
+          <img src="./Pictures/ORANGE.png" class="img-circle person" alt="Random Name" width="255" height="255">
+      </div>
+      <div class="col-sm-6">
+          <br>
+          <img src="./Pictures/axians.png" class="img-circle person" alt="Random Name" width="255" height="255">
       </div>
     </div>
   </div>
