--- a/index.html
+++ b/index.html
@@ -2163,13 +2163,17 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-4">
           <br>
           <img src="./Pictures/ORANGE.png" class="img-circle person" alt="Random Name" width="255" height="255">
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-4">
           <br>
           <img src="./Pictures/axians.png" class="img-circle person" alt="Random Name" width="255" height="255">
+      </div>
+      <div class="col-sm-4">
+          <br>
+          <img src="./Pictures/IPC.png" class="img-circle person" alt="Random Name" width="255" height="255">
       </div>
     </div>
   </div>
