--- a/index.html
+++ b/index.html
@@ -2137,7 +2137,7 @@
     <div class="row">
       <div class="col-sm-4">
           <br>
-          <img src="./Pictures/NGAM.png" class="img-circle person" alt="Random Name" width="255" height="255">
+          <img src="./Pictures/NGA.png" class="img-circle person" alt="Random Name" width="255" height="255">
       </div>
       <div class="col-sm-4">
           <br>
