--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             <img src="./Pictures/ORGALOGO.png" class="img-circle person" alt="Random Name3" width="255" height="255">
         </a>
         <div id="demo4" class="collapse">
-          <a href="mailto:mailto:bpce-challenge-voile2017@ap.natixis.com">Contactez-nous !</a>
+          <a href="mailto:bpce-challenge-voile2017@ap.natixis.com">Contactez-nous !</a>
         </div>
       </div>
       <div class="col-sm-3">
