Change site owner

--- a/index.html
+++ b/index.html
@@ -182,7 +182,6 @@
           </ul>
         </li>
 		-->
-        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
     </div>
   </div>
@@ -213,7 +212,6 @@
           </ul>
         </li>
 		-->
-        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
     </div>
   </div>
@@ -2199,7 +2197,7 @@
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Site made by Cashburn <a href="http://calderashburn.github.io" data-toggle="tooltip"</a></p> 
+  <p><a href="mailto:bpce-challenge-voile2017@ap.natixis.com">BPCE Challenge Voile 2017 – Marseille</a></p> 
 </footer>
 
 <script>
