add chevron down for info pratiques

--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
         <a href="#demo4" data-toggle="collapse">
             <img src="./Pictures/ORGALOGO.png" class="img-circle person" alt="Random Name3" width="255" height="255">
         </a>
+	<a class="down-arrow" href="#demo4" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down"></span></a>
         <div id="demo4" class="collapse">
           <a href="mailto:bpce-challenge-voile2017@ap.natixis.com">Contactez-nous !</a>
         </div>
@@ -346,6 +347,7 @@
           <a href="#demo" data-toggle="collapse">
               <img src="./Pictures/Maps-Marseille.png" class="img-circle person" alt="Random Name" width="255" height="255">
           </a>
+	  <a class="down-arrow" href="#demo" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down"></span></a>
           <div id="demo" class="collapse">
               <ul>
                 <li><a href=https://www.residence-canebiere.com/ />Résidence La Canebière, centre Leo Lagrange</a> - <a href=https://www.google.com.hk/maps/place/R%C3%A9sidence+La+Canebi%C3%A8re/@43.297177,5.380173,15z/data=!4m5!3m4!1s0x0:0x403a86d6eecb08e5!8m2!3d43.297177!4d5.380173>Plan d'acces</a></li>
@@ -359,6 +361,7 @@
           <a href="#demo2" data-toggle="collapse">
               <img src="./Pictures/tw-circle.jpg" class="img-circle person" alt="Random Name2" width="255" height="255">
           </a>
+	  <a class="down-arrow" href="#demo2" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down"></span></a>
           <div id="demo2" class="collapse">
               <ul>
                 <li>Une flotte monotype de 22 Grand surprises</li>
@@ -374,6 +377,7 @@
         <a href="#demo3" data-toggle="collapse">
             <img src="./Pictures/snm-flag.png" class="img-circle person" alt="Random Name3" width="255" height="255">
         </a>
+	<a class="down-arrow" href="#demo3" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down"></span></a>
         <div id="demo3" class="collapse">
           <ul>
             <li>La regate est organisee en partenariat avec <a href=http://www.lanautique.com/>la Societe Nautique de Marseille</a>.</li> 
