ADD Sponsors website links

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
           </ul>
         </li>
 		-->
+        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
     </div>
   </div>
@@ -212,6 +213,7 @@
           </ul>
         </li>
 		-->
+        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
     </div>
   </div>
@@ -336,10 +338,8 @@
         <a href="#demo4" data-toggle="collapse">
             <img src="./Pictures/ORGALOGO.png" class="img-circle person" alt="Random Name3" width="255" height="255">
         </a>
-	<br>
-	<a class="down-arrow" href="#demo4" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down"></span></a>
         <div id="demo4" class="collapse">
-          <a href="mailto:bpce-challenge-voile2017@ap.natixis.com">Contactez-nous !</a>
+          <a href="mailto:mailto:bpce-challenge-voile2017@ap.natixis.com">Contactez-nous !</a>
         </div>
       </div>
       <div class="col-sm-3">
@@ -348,8 +348,6 @@
           <a href="#demo" data-toggle="collapse">
               <img src="./Pictures/Maps-Marseille.png" class="img-circle person" alt="Random Name" width="255" height="255">
           </a>
-	  <br>
-	  <a class="down-arrow" href="#demo" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down"></span></a>
           <div id="demo" class="collapse">
               <ul>
                 <li><a href=https://www.residence-canebiere.com/ />Résidence La Canebière, centre Leo Lagrange</a> - <a href=https://www.google.com.hk/maps/place/R%C3%A9sidence+La+Canebi%C3%A8re/@43.297177,5.380173,15z/data=!4m5!3m4!1s0x0:0x403a86d6eecb08e5!8m2!3d43.297177!4d5.380173>Plan d'acces</a></li>
@@ -363,8 +361,6 @@
           <a href="#demo2" data-toggle="collapse">
               <img src="./Pictures/tw-circle.jpg" class="img-circle person" alt="Random Name2" width="255" height="255">
           </a>
-	  <br>
-	  <a class="down-arrow" href="#demo2" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down"></span></a>
           <div id="demo2" class="collapse">
               <ul>
                 <li>Une flotte monotype de 22 Grand surprises</li>
@@ -380,8 +376,6 @@
         <a href="#demo3" data-toggle="collapse">
             <img src="./Pictures/snm-flag.png" class="img-circle person" alt="Random Name3" width="255" height="255">
         </a>
-	<br>
-	<a class="down-arrow" href="#demo3" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down"></span></a>
         <div id="demo3" class="collapse">
           <ul>
             <li>La regate est organisee en partenariat avec <a href=http://www.lanautique.com/>la Societe Nautique de Marseille</a>.</li> 
@@ -2143,49 +2137,69 @@
     <div class="row">
       <div class="col-sm-4">
           <br>
-          <img src="./Pictures/NGAM.png" class="img-circle person" alt="Random Name" width="255" height="255">
+          <a href=https://ngam.natixis.com/>
+            <img src="./Pictures/NGAM.png" class="img-circle person" alt="Random Name" width="255" height="255">
+          </a>
       </div>
       <div class="col-sm-4">
           <br>
+          <a href=https://www.assurances.natixis.com/>
           <img src="./Pictures/NATIXIS ASSURANCES.png" class="img-circle person" alt="Random Name" width="255" height="255">
+          </a>
       </div>
       <div class="col-sm-4">
           <br>
+          <a href=https://www.natixis.com/>
           <img src="./Pictures/NATIXIS.png" class="img-circle person" alt="Random Name" width="255" height="255">
+          </a>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-4">
           <br>
+          <a href=https://www.brinks.com/>
           <img src="./Pictures/brinks.png" class="img-circle person" alt="Random Name" width="255" height="255">
+          </a>
       </div>
       <div class="col-sm-4">
           <br>
+          <a href=https://informatique.banquepopulaire.fr/>
           <img src="./Pictures/iBP.png" class="img-circle person" alt="Random Name" width="255" height="255">
+          </a>
       </div>
       <div class="col-sm-4">
           <br>
+          <a href=https://www.nextiraone.eu//>
           <img src="./Pictures/NXO.png" class="img-circle person" alt="Random Name" width="255" height="255">
+          </a>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-4">
           <br>
+          <a href=http://orange-business.com//>
           <img src="./Pictures/ORANGE.png" class="img-circle person" alt="Random Name" width="255" height="255">
+          </a>
       </div>
       <div class="col-sm-4">
           <br>
+          <a href=https://www.axians.com/en//>
           <img src="./Pictures/axians.png" class="img-circle person" alt="Random Name" width="255" height="255">
+          </a>
       </div>
       <div class="col-sm-4">
           <br>
+          <a href=http://www.ipc.com//>
           <img src="./Pictures/IPC.png" class="img-circle person" alt="Random Name" width="255" height="255">
+          </a>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-4">
           <br>
+          <a href=http://www.visa.com/>
           <img src="./Pictures/VISA.png" class="img-circle person" alt="Random Name" width="255" height="255">
+          </a>
       </div>
       <div class="col-sm-4">
           <br>
@@ -2205,7 +2219,7 @@
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p><a href="mailto:bpce-challenge-voile2017@ap.natixis.com">BPCE Challenge Voile 2017 – Marseille</a></p> 
+  <p>Site made by Cashburn <a href="http://calderashburn.github.io" data-toggle="tooltip"</a></p> 
 </footer>
 
 <script>
