FIX Chevron and mail to address

--- a/index.html
+++ b/index.html
@@ -182,7 +182,6 @@
           </ul>
         </li>
 		-->
-        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
     </div>
   </div>
@@ -213,7 +212,6 @@
           </ul>
         </li>
 		-->
-        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
     </div>
   </div>
@@ -338,8 +336,10 @@
         <a href="#demo4" data-toggle="collapse">
             <img src="./Pictures/ORGALOGO.png" class="img-circle person" alt="Random Name3" width="255" height="255">
         </a>
+      	<br>
+      	<a class="down-arrow" href="#demo4" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down" title="Voir"></span></a>
         <div id="demo4" class="collapse">
-          <a href="mailto:mailto:bpce-challenge-voile2017@ap.natixis.com">Contactez-nous !</a>
+          <a href="mailto:bpce-challenge-voile2017@ap.natixis.com">Contactez-nous !</a>
         </div>
       </div>
       <div class="col-sm-3">
@@ -348,6 +348,8 @@
           <a href="#demo" data-toggle="collapse">
               <img src="./Pictures/Maps-Marseille.png" class="img-circle person" alt="Random Name" width="255" height="255">
           </a>
+        	<br>
+        	<a class="down-arrow" href="#demo" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down" title="Voir"></span></a>
           <div id="demo" class="collapse">
               <ul>
                 <li><a href=https://www.residence-canebiere.com/ />Résidence La Canebière, centre Leo Lagrange</a> - <a href=https://www.google.com.hk/maps/place/R%C3%A9sidence+La+Canebi%C3%A8re/@43.297177,5.380173,15z/data=!4m5!3m4!1s0x0:0x403a86d6eecb08e5!8m2!3d43.297177!4d5.380173>Plan d'acces</a></li>
@@ -361,6 +363,8 @@
           <a href="#demo2" data-toggle="collapse">
               <img src="./Pictures/tw-circle.jpg" class="img-circle person" alt="Random Name2" width="255" height="255">
           </a>
+        	<br>
+        	<a class="down-arrow" href="#demo2" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down" title="Voir"></span></a>
           <div id="demo2" class="collapse">
               <ul>
                 <li>Une flotte monotype de 22 Grand surprises</li>
@@ -376,6 +380,8 @@
         <a href="#demo3" data-toggle="collapse">
             <img src="./Pictures/snm-flag.png" class="img-circle person" alt="Random Name3" width="255" height="255">
         </a>
+      	<br>
+      	<a class="down-arrow" href="#demo3" data-toggle="collapse"><span class="glyphicon glyphicon-chevron-down" title="Voir"></span></a>
         <div id="demo3" class="collapse">
           <ul>
             <li>La regate est organisee en partenariat avec <a href=http://www.lanautique.com/>la Societe Nautique de Marseille</a>.</li> 
@@ -2219,7 +2225,7 @@
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Site made by Cashburn <a href="http://calderashburn.github.io" data-toggle="tooltip"</a></p> 
+  <p><a href="mailto:bpce-challenge-voile2017@ap.natixis.com">BPCE Challenge Voile 2017 – Marseille</a></p>
 </footer>
 
 <script>
