--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">BPCE CHALENGE VOILE 2017</a>
+      <a class="navbar-brand" href="#myPage">BPCE CHALLENGE VOILE 2017</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
