--- a/index.html
+++ b/index.html
@@ -1085,21 +1085,21 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ibp/Daniel.jpg" alt="Head" width="400" height="300">
                 <p><strong>Daniel COLLETTE</strong></p>
                 <p><strong>Skipper</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ibp/Sylvaine.jpg" alt="Head" width="400" height="300">
               <p><strong>Sylvaine QUILY</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ibp/Stéphane B.jpg" alt="Head" width="400" height="300">
               <p><strong>Stéphane BOU</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
@@ -1108,21 +1108,21 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ibp/Christophe.jpg" alt="Head" width="400" height="300">
               <p><strong>Christophe LE RESTE</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ibp/Stéphane E.jpg" alt="Head" width="400" height="300">
               <p><strong>Stéphane ENGUEHARD</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ibp/Jerome.jpg" alt="Head" width="400" height="300">
               <p><strong>Jérôme FABRE</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
@@ -1131,14 +1131,14 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ibp/Benoit.jpg" alt="Head" width="400" height="300">
               <p><strong>Benoît SEILLER </strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/ibp/Michel RICARD.jpg" alt="Head" width="400" height="300">
               <p><strong>Michel RICARD</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
