Pictures team apac

--- a/index.html
+++ b/index.html
@@ -595,21 +595,21 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/apac/guillaumelemenager.png" alt="Head" width="400" height="300">
                 <p><strong>Guillaume LEMENAGER</strong></p>
                 <p><strong>Skipper</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/apac/charlesdurban.png" alt="Head" width="400" height="300">
               <p><strong>Charles DURBAN</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/apac/viet.png" alt="Head" width="400" height="300">
               <p><strong>Viet HU THUC</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
@@ -618,32 +618,39 @@
         <div class="row text-center">
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/apac/trinh.png" alt="Head" width="400" height="300">
               <p><strong>Trinh NGUYEN</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/apac/alexandreperraud.png" alt="Head" width="400" height="300">
               <p><strong>Alex PERRAUD</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/apac/samplagnard.png" alt="Head" width="400" height="300">
               <p><strong>Samuel PLAGNARD</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
           </div>
         </div>
         <div class="row text-center">
+		    <div class="col-sm-4">
+		      <div class="thumbnail">
+		        <img src="./Pictures/team/apac/meiyan.png" alt="Head" width="400" height="300">
+		        <p><strong>Meiyan Ding</strong></p>
+		        <p><strong>Equipier</strong></p>
+		      </div>
+		  </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/apac/olivierpoirieux.png" alt="Head" width="400" height="300">
               <p><strong>Olivier POIRIEUX</strong></p>
-              <p><strong>Equipier</strong></p>
+              <p><strong>Supléant</strong></p>
             </div>
           </div>
         </div>
@@ -1269,7 +1276,7 @@
           </div>
           <div class="col-sm-4">
             <div class="thumbnail">
-              <img src="./Pictures/head.jpg" alt="Head" width="400" height="300">
+              <img src="./Pictures/team/globalmarket/jerometricot.png" alt="Head" width="400" height="300">
               <p><strong>Jérôme TRICOT</strong></p>
               <p><strong>Equipier</strong></p>
             </div>
