--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
       </div>
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="" alt="CEBFC" width="400" height="300">
+          <img src="./Pictures/team/cebfc.png" alt="CEBFC" width="400" height="300">
           <p><strong>CEBFC</strong></p>
           <button class="btn" data-toggle="modal" data-target="#TeamCEBFC">View Team</button>
         </div>
