--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
             <div class="thumbnail">
               <img src="./Pictures/team/apac/olivierpoirieux.png" alt="Head" width="400" height="300">
               <p><strong>Olivier POIRIEUX</strong></p>
-              <p><strong>Suppléant</strong></p>
+              <p><strong>Equipier</strong></p>
             </div>
           </div>
         </div>
